tier5.css
/* ... */
.approachCircle{
  width:50px;
  height:50px;
  border-radius:50%;
  background-color: rgb(221,98,92);
  color:white;
  position:relative;
  vertical-align: top;
  display: inline-block;
  font-size:26px;
  padding-top:7px;
}


.approachPoints{
font-size: 24px;
font-weight: bold;
}

.approachText{
text-align: left;
width:650px;
display: inline-block;
}

@media (max-width:827px) {
  .approachText{
    width:90%;
  }
}

/*STRATEGY:FUNNEL SECTION*/

.funnelLogos{
  text-align: center;
  padding-top: 2%;
}



.competitorLogos{
  width:250px;
  display: inline-block;
}

.cContact, .lNexus{
    width:300px;
}


.logoRow{
  padding-bottom:1%;
}

.funnel{
  text-align: center;
  width: 300px;
}
/*STRATEGY:Competitor Table*/

.tableParent{
  text-align: center;
}

.compTable{
  width:80%;
  margin:auto;
  text-align: left;
}

@media screen (max-width: 767px) {
  .compTable{
    width:90%;
    text-align: left;
  }
}

@media screen (max-width: 931px) {
  .tableParent{
    text-align: left;
  }
}

.compTableTitle{
  font-size: 40px;
  text-align: center;
  color:rgb(01, 161, 167);
  background:rgb(234,231,231);
  margin-bottom: 4%;
  margin-top: 4%;
  padding-top: 2%;
  padding-bottom: 2%;
}
.compTableBar{
  background-color: rgb(01, 161, 167);
  color:white;
  text-align: center;
}
.compTableText{
  vertical-align: top;
  color:rgb(74, 74, 74);
}

th{
  text-align: center;
}

.leftSideTitles{
background-color: rgb(01, 161, 167);
color:white;
padding-left: 1%;
padding-right:1%;
}

.weakLine{
  border-top:solid 1px rgb(74, 74, 74);
}
.weakColor{
background-color:rgb(246, 243, 246);
}

.weakLineTop{
  border-top:solid 1px white;
}

td{
width:150px;
font-size: 16px;
}

.competitorTableLogos{
  width:110px;
  vertical-align: bottom;
}
.zoomTableLogo{
  width:75px;
}

.tierTableLogo{
  width:90px;
}

.insideTableLogo {
width:75px;
}

.cost{
  list-style-type: none;
}
.table-borderless tbody tr td, .table-borderless tbody tr th, .table-borderless thead tr th {
    border-top: none;
}

.features{
  text-align: center;
}

.featureCompImg{
  width:70%;
}
tbody{
  border-color: 1px solid white;
}

/*THE RECOMMENDATION CIRCLES*/

.circleRecWrapper{
  text-align: center;
}

.recCircle{
width:225px;
height:225px;
border-radius:50%;
border: solid 3px rgb(221,98,92);
color: rgb(74, 84, 74);
display:inline-block;
margin-left: 2%;
position:relative;
}

.circleRecText{
  font-size: 18px;
  position:absolute;
  width:100%;
  padding-top:25%;
  padding-left:5%;
  padding-right:5%;
}
/*PIE SECTION*/
.pieIntro{
  text-align: center;
  margin-top:3%;
  /*margin-bottom: 3%;*/
}

.pieIntroSec{
  font-size: 20px;
  display: inline-block;
  text-align:center;
}
.pies{
  vertical-align:top;
}
.pieItem{
  width:200px;
  text-align: center;
  margin-bottom: 3%;
}

.pieItem25{
  width:100px;
  padding-top: 10%;
}

.pieIntroSubTitle{
  font-weight: bold;
  font-size: 18px;
}
.pieText{
  font-size: 16px;
}

.operators{
padding-top: 175px;
}



.pieSign{
  width:50px;
}

  min-height: 100%;


/*INTERVIEW & SURVERY SECTION*/

.surveyAndInterview{
  margin-bottom: 3%;
}
.researchPeepsContainer{
  text-align: center;
}

.peepsStats{
  text-align: left;
  vertical-align: top;
  font-size: 20px;
}
.researchInline{
    display:inline-block;
}

.researchNumbers{
  font-size: 20px;
}

.peeps{
  width:75px;
  vertical-align: bottom;
  /*margin-top:1%;*/
  margin-right: 2%;
  margin-bottom: 2%;
}
.topPeep{
  padding-bottom: 3%;
}

.width{
  width: 200px;
}
 .researchDes{
   width: 450px;
   text-align: left;
   vertical-align: top;
 }

/*CIRCLES AND TRIANGLES*/
.titleP{
font-size: 20px;
font-weight: bold;
text-align: center;
}

.researchCirTri{
  text-align: center;
  margin 0 auto;
}

.researchCircles {
  display:inline-block;
  /*width: 550px;*/
  vertical-align: top;
}
/*set width???*/
.circles3{
  width:400px;
}

.researchCircles{
    margin-bottom: 3%;
    display:inline-block;
}

/*TRIAGLES*/
.researchTriangles{
  display:inline-block;
  text-align: center;
  margin-top:0.5%;
}

.triangleText{
  text-align: left;
  width:400px;
  font-size: 20px;
  font-weight: bold;
}

.triangleTextImg{
  width:400px;
}
.triangleSectionDivs{
  text-align: center;
}

/*BRAIN */
.brainBackground{
  text-align: center;
}

.brain{
  padding-top:3%;
  padding-bottom: 3%;
  width: 80%;
}

/*INTERVIEW COMMENTS*/

.squareRec{
  margin:5%;
}

.rec {
  width: 185px;
  height: 120px;
  color:rgb(74, 74, 74);
  text-align: left;
  padding:5%;
  text-align:left;
}

.rec1{
  background-color: rgb(214,245, 242);
}

.rec2{
  background-color: rgb(246,243,246);
}

.rec3{

  background-color: rgb(137,229,223);
}

.rec4{
  background-color: rgb(74, 74, 74);
  color:white;
}

.rec5{
  background-color: rgb(01,161,167);
  color:white;
}

.square{
  width: 185px;
  height: 150px;
  text-align: center;
  padding: 5%;
  margin-bottom: 10%;
}

.recPaddimg{
  padding-right:2%;
}

.squareRec{
  text-align: center;
}

.squareRecSec{
  display: inline-block;
  margin-bottom: 4%;
}

.faceCircles{
  width:75px;
}

/*THE LINE CONNECTED TO CIRCLE*/
.findingsCircle1{
  border-radius: 50%;
  width: 50px;
  height: 50px;
  text-align: center;
  background-color: rgb(221,98,92);
  z-index: 2;
  vertical-align: top;
  display: inline-block;
  margin-right:2%;
}

.findingsCircle {
  position: relative;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  text-align: center;
  margin-top: 50px;
  background-color: rgb(221,98,92);
  z-index: 2;
  vertical-align: top;
  display: inline-block;
  margin-right:2%;
}

.findingsCircle:first-child {
  margin-top: 0;
}

.findingsCircle:after{
  position: absolute;
  background-color: rgb(221,98,92);
  width: 5px;
  height: 200%;
  display: block;
  content: '';
  left: 50%;
  z-index: 1;
  top: -54px;
  margin-left: -1px;
}

.findingsCircle:first-child:before {
  display: none;
}

.findings{
  text-align: center;
  margin-bottom: 2%;
}
.bold700{
/*font-family: 'Lora', serif;*/
font-weight: 700;
}
/* ... */

